--- a/index.html
+++ b/index.html
@@ -23,8 +23,38 @@
 
     -->
 
-
     <h1>Hello World!</h1>
+
+    <div class="main">
+
+        <div class="head">
+
+            <h1 id="title">Patrick and Ebenezer projects</h1>
+
+            <p id="description"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, quidem.</p>
+
+        </div>
+
+        <div class="form" id="survey-form">
+
+            <input type="text" id="name" placeholder="Enter name here">
+            <input type="email" id="email" placeholder="Enter your email">
+            <input type="number" id="number" placeholder="Enter your email">
+
+
+
+
+
+
+        </div>
+
+
+
+
+
+    </div>
+
+
 
 
 
