a part of html codes by Patrick

--- a/index.html
+++ b/index.html
@@ -38,11 +38,53 @@
         <div class="form" id="survey-form">
 
             <input type="text" id="name" placeholder="Enter name here">
+            <label for="name" id="name-label"> Name </label><br>
+
             <input type="email" id="email" placeholder="Enter your email">
+            <label for="name" id="email-label"> Email </label><br>
+
             <input type="number" id="number" placeholder="Enter your email">
+            <label for="name" id="number-label" min="10" max="10"> Number </label><br>
 
 
+            <label for="pet-select">which option best describe your current role?</label>
 
+            <select id="dropdown">
+
+                <option value="">what is your current role</option>
+                <option value="dog">Student</option>
+                <option value="cat">Full time job</option>
+                <option value="hamster">full time learner</option>
+                <option value="parrot">Prefer not to say</option>
+                <option value="spider">Other</option>
+               
+             </select>
+
+
+            <p>what would you like to see improved?</p>
+
+            <input type="radio" id="html" name="fav_language" value="HTML">
+            <label for="html">Front-end projects</label><br>
+            <input type="radio" id="html" name="fav_language" value="HTML">
+            <label for="html">Back-end projects</label><br>
+            <input type="radio" id="css" name="fav_language" value="CSS">
+            <label for="css">Data visualization</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Challenges</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Open source community</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Gitter help rooms</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Videos</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">city meetups</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Wiki</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Forum</label><br>
+            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+            <label for="javascript">Additional course</label><br>
 
 
 
