changed some part of html code and CSS by Patrick

--- a/index.html
+++ b/index.html
@@ -23,33 +23,34 @@
 
     -->
 
-    <h1>Hello World!</h1>
+    <!-- <h1>Hello World!</h1> -->
 
     <div class="main">
 
         <div class="head">
 
-            <h1 id="title">Patrick and Ebenezer projects</h1>
+            <h1 class="header" id="title">Patrick and Ebenezer projects</h1>
 
             <p id="description"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, quidem.</p>
 
-        </div>
+            <br>
 
-        <div class="form" id="survey-form">
+            <div class="form" id="survey-form">
 
-            <input type="text" id="name" placeholder="Enter name here">
-            <label for="name" id="name-label"> Name </label><br>
+                <label for="name" id="name-label"> Name </label><br>
+                <input type="text" id="name" placeholder="Enter name here"><br>
 
-            <input type="email" id="email" placeholder="Enter your email">
-            <label for="name" id="email-label"> Email </label><br>
+                <label for="name" id="email-label"> Email </label><br>
+                <input type="email" id="email" placeholder="Enter your email"><br>
 
-            <input type="number" id="number" placeholder="Enter your email">
-            <label for="name" id="number-label" min="10" max="10"> Number </label><br>
+                <label for="name" id="number-label" min="10" max="90"> Age </label><br>
+                <input type="number" id="number" placeholder="Age"><br>
 
 
-            <label for="pet-select">which option best describe your current role?</label>
+                <br>
+                <label for="pet-select">which option best describe your current role?</label>
 
-            <select id="dropdown">
+                <select id="dropdown">
 
                 <option value="">what is your current role</option>
                 <option value="dog">Student</option>
@@ -60,39 +61,60 @@
                
              </select>
 
+                <br>
 
-            <p>what would you like to see improved?</p>
+                <p>Would you recommend freecode Camp to a friend?</p>
 
-            <input type="radio" id="html" name="fav_language" value="HTML">
-            <label for="html">Front-end projects</label><br>
-            <input type="radio" id="html" name="fav_language" value="HTML">
-            <label for="html">Back-end projects</label><br>
-            <input type="radio" id="css" name="fav_language" value="CSS">
-            <label for="css">Data visualization</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Challenges</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Open source community</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Gitter help rooms</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Videos</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">city meetups</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Wiki</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Forum</label><br>
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">Additional course</label><br>
+                <input type="radio">
+                <label for="definetly">Definetely</label><br>
+                <input type="radio">
+                <label for="javascript">Maybe</label><br>
+                <input type="radio">
+                <label for="javascript">Not sure</label><br>
+
+                <br>
 
 
+                <p>what would you like to see improved?</p>
+
+                <input type="checkbox">
+                <label for="html">front-end projects</label><br>
+                <input type="checkbox">
+                <label for="html">Back-end projects</label><br>
+                <input type="checkbox">
+                <label for="css">Data visualization</label><br>
+                <input type="checkbox">
+                <label for="javascript">Challenges</label><br>
+                <input type="checkbox">
+                <label for="javascript">Open source community</label><br>
+                <input type="checkbox">
+                <label for="javascript">Gitter help rooms</label><br>
+                <input type="checkbox">
+                <label for="javascript">Videos</label><br>
+                <input type="checkbox">
+                <label for="javascript">city meetups</label><br>
+                <input type="checkbox">
+                <label for="javascript">Wiki</label><br>
+                <input type="checkbox">
+                <label for="javascript">Forum</label><br>
+                <input type="checkbox">
+                <label for="javascript">Additional course</label><br>
+
+                <br>
+
+                <div class="textArea">
+
+                    <p>Any comment or suggestion</p>
+
+                    <textarea rows="9" cols="70" class="txtArea" placeholder="Enter your comment here"></textarea> </textarea>
+
+                </div>
+
+                <button class="btn">Submit</button>
+
+            </div>
 
         </div>
-
-
-
-
 
     </div>
 
