changed some part of html code and CSS by Patrick

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 </div>
 
-                <button class="btn">Submit</button>
+                <button class="btn" id="submit">Submit</button>
 
             </div>
 
