--- a/index.html
+++ b/index.html
@@ -36,69 +36,72 @@
             <br>
 
             <div class="form" id="survey-form">
+                <div class="input">
+                    <label for="name" id="name-label"> Name </label><br>
+                    <input type="text" id="name" placeholder="Enter name here" required><br>
 
-                <label for="name" id="name-label"> Name </label><br>
-                <input type="text" id="name" placeholder="Enter name here"><br>
+                    <label for="name" id="email-label"> Email </label><br>
+                    <input type="email" id="email" placeholder="Enter your email" required><br>
 
-                <label for="name" id="email-label"> Email </label><br>
-                <input type="email" id="email" placeholder="Enter your email"><br>
+                    <label for="name" id="number-label"> Age </label><br>
+                    <input type="number" id="number" placeholder="Age" min="10" max="90"><br>
 
-                <label for="name" id="number-label" min="10" max="90"> Age </label><br>
-                <input type="number" id="number" placeholder="Age"><br>
-
-
+                </div>
                 <br>
                 <label for="pet-select">which option best describe your current role?</label>
 
                 <select id="dropdown">
 
-                <option value="">what is your current role</option>
-                <option value="dog">Student</option>
-                <option value="cat">Full time job</option>
-                <option value="hamster">full time learner</option>
-                <option value="parrot">Prefer not to say</option>
-                <option value="spider">Other</option>
+                <option value="whatisyourcurrent">what is your current role</option>
+                <option value="student">Student</option>
+                <option value="fullTime">Full time job</option>
+                <option value="fulltimelearner">full time learner</option>
+                <option value="prefer not to say">Prefer not to say</option>
+                <option value="other">Other</option>
                
              </select>
 
                 <br>
+                <div class="form-group">
+                    <p>Would you recommend freecode Camp to a friend?</p>
 
-                <p>Would you recommend freecode Camp to a friend?</p>
+                    <input type="radio">
+                    <label for="definetly" value="definetely">Definetely</label><br>
+                    <input type="radio">
+                    <label for="maybe" value="maybe">Maybe</label><br>
+                    <input type="radio">
+                    <label for="notsure" value="Not sure">Not sure</label><br>
 
-                <input type="radio">
-                <label for="definetly">Definetely</label><br>
-                <input type="radio">
-                <label for="javascript">Maybe</label><br>
-                <input type="radio">
-                <label for="javascript">Not sure</label><br>
-
-                <br>
+                    <br>
 
 
-                <p>what would you like to see improved?</p>
+                    <p>what would you like to see improved?</p>
 
-                <input type="checkbox">
-                <label for="html">front-end projects</label><br>
-                <input type="checkbox">
-                <label for="html">Back-end projects</label><br>
-                <input type="checkbox">
-                <label for="css">Data visualization</label><br>
-                <input type="checkbox">
-                <label for="javascript">Challenges</label><br>
-                <input type="checkbox">
-                <label for="javascript">Open source community</label><br>
-                <input type="checkbox">
-                <label for="javascript">Gitter help rooms</label><br>
-                <input type="checkbox">
-                <label for="javascript">Videos</label><br>
-                <input type="checkbox">
-                <label for="javascript">city meetups</label><br>
-                <input type="checkbox">
-                <label for="javascript">Wiki</label><br>
-                <input type="checkbox">
-                <label for="javascript">Forum</label><br>
-                <input type="checkbox">
-                <label for="javascript">Additional course</label><br>
+                    <input type="checkbox">
+                    <label for="html">front-end projects</label><br>
+                    <input type="checkbox">
+                    <label for="html">Back-end projects</label><br>
+                    <input type="checkbox">
+                    <label for="css">Data visualization</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Challenges</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Open source community</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Gitter help rooms</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Videos</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">city meetups</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Wiki</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Forum</label><br>
+                    <input type="checkbox">
+                    <label for="javascript">Additional course</label><br>
+
+
+                </div>
 
                 <br>
 
@@ -106,11 +109,12 @@
 
                     <p>Any comment or suggestion</p>
 
-                    <textarea rows="9" cols="70" class="txtArea" placeholder="Enter your comment here"></textarea> </textarea>
+                    <textarea rows="9" cols="50" class="txtArea" placeholder="Enter your comment here"></textarea> </textarea>
+
+                    <br>
+                    <button class="btn" id="submit">Submit</button>
 
                 </div>
-
-                <button class="btn" id="submit">Submit</button>
 
             </div>
 
